--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,26 @@
   "description": "A tool for legal professionals specializing in Intellectual Property Law in Kenya.",
   "icons": [
     {
-      "src": "logo.jpg",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "logo.jpg",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/jpg"
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-maskable-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/icon-maskable-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": "/",
